# KlondikeSlides

./: README.md  pyproject.toml
data/processed/paleo_climate/: Benthic.csv  Greenland.csv  Yukon.csv
data/processed/wildfire/: wildfire.csv
data/raw/logger/: YGS-Acaprima_ST01_hourly_2025.nc  YGS-Acaprima_ST02_hourly_2025.nc  YGS-Acaprima_ST03_hourly_2025.nc  YGS-Antimony_ST01_hourly_2025.nc  YGS-Antimony_ST02_hourly_2025.nc  YGS-Antimony_ST03_hourly_2025.nc  YGS-HendersonSlide_mid_ST01_hourly_2025.nc  YGS-HendersonSlide_mid_ST03_hourly_2025.nc  YGS-HendersonSlide_steep_ST01_hourly_2025.nc  YGS-HendersonSlide_steep_ST03_hourly_2025.nc  YGS-KingSolomon_north_ST01_hourly_2025.nc  YGS-KingSolomon_north_ST02_hourly_2025.nc  YGS-KingSolomon_north_ST03_hourly_2025.nc  YGS-KingSolomon_top_ST01_hourly_2025.nc  YGS-KingSolomon_top_ST02_hourly_2025.nc  YGS-KingSolomon_top_ST03_hourly_2025.nc  YGS-Lostponies_ST01_hourly_2025.nc  YGS-Lostponies_ST02_hourly_2025.nc  YGS-Lostponies_ST03_hourly_2025.nc  YGS-Moosehide_coarse_ST01_hourly_2025.nc  YGS-Moosehide_coarse_ST02_hourly_2025.nc  YGS-Moosehide_coarse_ST03_hourly_2025.nc  YGS-Moosehide_fine_ST01_hourly_2025.nc  YGS-Moosehide_fine_ST02_hourly_2025.nc  YGS-Moosehide_fine_ST03_hourly_2025.nc  YGS-Moosehide_meteo_ST01_hourly_2025.nc  YGS-Moosehide_meteo_ST02_hourly_2025.nc  YGS-Moosehide_meteo_ST03_hourly_2025.nc  YGS-Moosehide_north_ST01_hourly_2025.nc  YGS-Moosehide_north_ST02_hourly_2025.nc  (+28 more)
examples/: master_notebook.ipynb
src/KlondikeSlides/: __init__.py  constants.py  format_raw_data.py  summary.py
(+9 files in other folders)
