[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "KlondikeSlides"
version = "0.0.1"
authors = [
    {name = "Victor Pozsgay", email = "victorpozsgay@cunet.carleton.ca"},
]
description = "Data processing, formatting, analysis, and plotting for the Klondike permafrost thaw and landslide paper"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/VictorPozsgay/KlondikeSlides"